rust/crates/astra-cli/src/tui/bottom_pane/snapshots/astra__tui__bottom_pane__queue_preview_tests__bottom_surface_active_42.snap
---
source: crates/astra-cli/src/tui/bottom_pane/queue_preview_tests.rs
expression: "snapshot_text(&pane, Rect::new(0, 0, 42, 5))"
---
· Message astra                           
  Queued for next tool · Ctrl+C stops     
  sonnet-4.6 · ~/github/astra
